--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+bcrypt==4.0.1
 fastapi==0.103.1
 passlib==1.7.4
-pydantic==2.3.0
+python-jose==3.3.0
+python-multipart==0.0.6
 SQLAlchemy==2.0.20
+uvicorn==0.23.2
